[project]
name = "spinenet"
description = "Automated software for analysing clinical spinal MRI scans."
version = "2"
readme = "README.md"
license = { file = "LICENCE.md" }

[tool.setuptools]
packages = ["spinenet"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
